Added IP details in contact us and tracking for user

--- a/api/static/css/dashboard.css
+++ b/api/static/css/dashboard.css
@@ -13,6 +13,7 @@
 
 .back_color {
     background-color: rgba(240, 230, 240, 0.628) !important;
+    /* background-color: rgb(226, 238, 227) !important; */
     border-radius: 10px;
 }
 
