Change book now to ship now in tracking page

--- a/api/templates/tracking.html
+++ b/api/templates/tracking.html
@@ -246,7 +246,7 @@
             <hr>
             <div class="row justify-content-around">
                 <div class="col-4 text-center">
-                    <a class="btn btn-outline-success btn-sm mb-3" href="{% url 'shipment_book' %}">Book now</a>
+                    <a class="btn btn-outline-success btn-sm mb-3" href="{% url 'shipment_book' %}">Ship now</a>
                 </div>
                 {% if show_comp_button %}
                 <div class="col-4 text-center">
