--- a/api/templates/tracking.html
+++ b/api/templates/tracking.html
@@ -97,7 +97,7 @@
                         <tr>
                             <th scope="row" class="text-success">Current Status</th>
                             {% if user.is_authenticated %}
-                            <td class="text-success"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
+                            <td class="text-success"><b><i class="bi bi-patch-check-fill"></i> {{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td class="text-success" style="font-size: 20px;"><b><i class="bi bi-patch-check-fill"></i> {{ last_status }}</b></td>
                             {% endif %}
@@ -132,15 +132,21 @@
                         {% else %}
                         <tr>
                             <th scope="row">Current Status</th>
-                            {% if user.is_authenticated %} {% if dbd.delivery_boy_name %}
+                            {% if booking_details.ref_courier_name.type != 'Internal' %}
+                            <!-- Need some external details here -->
+                            {% for track_his in tracking_history %}
+                            <td>{{ track_his.Activity | safe}}</td>
+                            {% endfor %} {% else %} {% if user.is_authenticated %} {% if dbd.delivery_boy_name %}
                             <td><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td><b>{{ last_status }}</b></td>
                             {% endif %} {% else %}
                             <td><b>{{ last_status }}</b></td>
-                            {% endif %}
+                            {% endif %} {% endif %}
                         </tr>
-                        {% endif %} {% if only_and_only_drs == 1 %}
+                        {% endif %}
+                        <!-- if only DRS -->
+                        {% if only_and_only_drs == 1 %}
                         <tr>
                             <th scope="row" style="font-size: 13px;">Remarks/Receiver</th>
                             <td>{{ reason }}</td>
@@ -213,6 +219,7 @@
         </div>
         {% else %}
         <!-- For external tracking details-->
+
         <div class="col-12">
             <div class="scrollme">
                 <table class="table table-striped table-responsive">
@@ -231,7 +238,8 @@
                         <tr>
                             <td>{{ track_his.Date }}</td>
                             <td>{{ track_his.Location }}</td>
-                            <td>{{ track_his.Activity | safe}}</td>
+                            <td></td>
+                            <!-- <td>{{ track_his.Activity | safe}}</td> -->
                             <td>{{ track_his.CheckpointState }}</td>
                         </tr>
                         {% endfor %}
