--- a/api/templates/drs_print.html
+++ b/api/templates/drs_print.html
@@ -34,39 +34,39 @@
                     <tbody>
                         <tr>
                             <td style="width:30%;">
-                                <div class="col-md-3">
-                                    <img src="{% static '\img\airpost_logo_1.png' %}" alt="Airpost Xpress" class="img-fluid" id="nav_img_">
+                                <div class="col-md-3 ">
+                                    <img src="{% static '\img\airpost_logo_1.png' %} " alt="Airpost Xpress " class="img-fluid " id="nav_img_ " style="max-width: 170px;">
                                 </div>
                             </td>
-                            <td style="font-weight: normal;"><b>DRS No:</b> {{ drs_heaser.drs_no }} <br><b>Area:</b> {{drs_heaser.area_name}} </td>
-                            <td style="font-weight: normal;"><b>Date:</b> {{ drs_heaser.date|date:"Y-m-d" }}<br><b>Del. boy:</b> {{ drs_heaser.deliveryboy_name }}</td>
+                            <td style=" font-weight: normal; "><b>DRS No:</b> {{ drs_heaser.drs_no }} <br><b>Area:</b> {{drs_heaser.area_name}} </td>
+                            <td style="font-weight: normal; "><b>Date:</b> {{ drs_heaser.date|date:"Y-m-d " }}<br><b>Del. boy:</b> {{ drs_heaser.deliveryboy_name }}</td>
                         </tr>
                         <tr>
                             <td><b>{{ branch_name }}</b></td>
-                            <td colspan="3" style="text-align: center;">{{ address }}</td>
+                            <td colspan="3 " style="text-align: center; ">{{ address }}</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <div class="col-12">
-                <table class="table table-bordered">
+            <div class="col-12 ">
+                <table class="table table-bordered ">
                     <thead>
                         <tr>
-                            <th scope="col">No.</th>
-                            <th scope="col">Center</th>
-                            <th scope="col">Docket No.</th>
-                            <th scope="col">Consignee Name</th>
-                            <th scope="col">Sign-Ph No./Stamp</th>
+                            <th scope="col ">No.</th>
+                            <th scope="col ">Center</th>
+                            <th scope="col ">Docket No.</th>
+                            <th scope="col ">Consignee Name</th>
+                            <th scope="col ">Sign-Ph No./Stamp</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for drs in drs_history %}
-                        <tr class="custom-row-height">
-                            <th scope="row">{{ forloop.counter }}.</th>
-                            <td class="w-22">{{ drs.origin }}</td>
-                            <td class="w-22">{{ drs.docket_number }}</td>
-                            <td class="w-29">{{ drs.consignee_name }}</td>
-                            <td class="w-18"></td>
+                        <tr class="custom-row-height ">
+                            <th scope="row ">{{ forloop.counter }}.</th>
+                            <td class="w-22 ">{{ drs.origin }}</td>
+                            <td class="w-22 ">{{ drs.docket_number }}</td>
+                            <td class="w-29 ">{{ drs.consignee_name }}</td>
+                            <td class="w-18 "></td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -75,10 +75,10 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
-    <script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js " integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN " crossorigin="anonymous "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js "></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js " integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p " crossorigin="anonymous "></script> -->
+    <script type="text/javascript ">
         window.print();
     </script>
 </body>
